--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,7 +2,7 @@ name: Nightly LCME pulse
 permissions: {contents: write}
 
 on:
-  schedule: [{cron: '30 3 * * *'}]   # 03:30 UTC nightly
+  schedule: [{cron: '30 3 * * *'}]      # 03:30 UTC nightly
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
       - run: pip install -r requirements.txt
 
       - run: python src/fetch_lcme.py
-            - run: python src/fetch_lcme_pdfs.py     # <-- new line
+      - run: python src/fetch_lcme_pdfs.py      # ← fixed indentation
       - run: python src/fetch_aamc.py
       - run: python src/tag_updates.py
       - run: python src/make_digest.py
